# ANB-rising-stars-showcase

./: .gitignore  Dockerfile  Dockerfile.worker  README.md  docker-compose.dev.yaml  docker-compose.yaml  main.py  nginx.conf  prometheus.yml  pyproject.toml  pytest.ini  r.txt  requirements.txt  sonar-project.properties
.github/workflows/: continuos_integration_pipeline.yaml  sonarqube.yaml  wf.yaml
capacity-planning/: LoadTests.jmx  plan_de_pruebas.md  pruebas_de_carga_entrega2.md  pruebas_de_carga_entrega3.md  pruebas_de_carga_entrega4.md
collections/: ANB-Rising-stars.postman_collection.json
docker/: Dockerfile.worker
docs/: ANB-env.postman_environment.json  Entrega_1.md  Entrega_2.md  Entrega_3.md  Entrega_4.md  Login-Signup.postman_collection.json  Video.postman_collection.json
src/: main.py
src/db/: database.py
src/models/: db_models.py  video.py
src/routers/: auth_router.py  public_router.py  videos_router.py
src/schemas/: pydantic_schemas.py
src/utils/: s3_utils.py  sqs_utils.py
sustentacion/: Entrega_1.md  Entrega_2.md  Entrega_3.md  Entrega_4.md
tests/: conftest.py
tests/api/: test_auth_endpoints.py  test_public_endpoints.py  test_video_endpoints.py
tests/unit/: test_videos_router.py
tests/unit/entrypoints/api/dtos/: test_video_dto.py
tests/worker/: test_video_processor_task.py
videos/test-videos/: video_test_fail.mov
worker/: tasks.py  video_proc.py  video_processor_task.py
